[optimize] 优化启动脚本